--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "joi": "^17.11.0",
     "mongoose": "^7.5.4",
     "morgan": "^1.10.0",
-    "node-telegram-bot-api": "^0.63.0"
+    "node-telegram-bot-api": "^0.63.0",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
