--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "oksana-openko-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "template",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=production node ./server.js",
-    "dev": "cross-env NODE_ENV=development nodemon ./server.js"
+    "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
+    "lint": "eslint **/*.js",
+    "lint:fix": "eslint --fix **/*.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
-    "mongoose": "^7.5.4",
     "morgan": "^1.10.0",
     "node-telegram-bot-api": "^0.63.0",
     "swagger-ui-express": "^5.0.0"
